    int lastLine, int[] physicalLines, int[] start, int[] end,
    int y, int lineHeight)

  This method paints a whole bunch of lines at once, instead of one at a
  time, so it should be more efficient for plugins like Background and
  ErrorList.

  See javadoc for parameter documentation.

- Added long-missing DefaultInputHandler.removeKeyBinding() method.

}}}

}}}

{{{ Version 4.2pre1

Thanks to Bill McMilleon, Kasper Graversen, Kris Kopicki,
Oliver Rutherfurd, Rudi Widmann and Ryan Grove for contributing to this
release.

{{{ Editing

- Quick copy now more consistent with usual mouse behavior:

  - Control-middle-clicking on a bracket will insert the contents of the
    bracketed block at the caret position.

  - Shift-middle-clicking at a point will insert text from the caret to
    the point at the caret position. Can be used to duplicate a line,
    for example.

- Register contents are now saved across editing sessions in
  ~/.jedit/registers.xml.

- Complete Word popup now has keyboard shortcuts (1 - 0) for inserting
  the first 10 elements in the list.

- Entering a prefix while a JTextComponent has focus will move focus to
  the text area. This allows shortcuts like C+e n n to be used from the
  search bar and such without having to prefix them with C+e C+e first.

- Control-Shift-click on a bracket scope in the gutter or a bracket in
  the text area narrows to that scope.

- Previously setting the wrap margin to zero with soft wrap on would
  wrap to the width of the text area. This is no longer supported.

- The text area now scrolls by screen lines, not by physical lines, when
  soft wrap is enabled. The previous behavior resulted in simpler code
  but was extremely counter-intuitive.

- Right-clicking in the text area with no selection (or if multiple
  selection mode is enabled) moves the caret to the clicked line before
  displaying the popup menu (Rudi Widmann).

- Control-clicking beyond the end of a line inserts the appropriate